[package]
name = "ArtVM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging libraries
log = "0.4.14"
env_logger = "0.9.0"

#Implement command-line argument manager
clap = "3.1.6"

# Environmrnt variable through files
dotenv = "0.15.0"

nom = "7.1.0"

# Permit to list all packages / modules dependencies
cargo-modules = "0.5.7"